src/objects/System_Config__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHEQUE_BOUNCE_CHARGE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge</label>
        <referenceTo>Global_Charges__c</referenceTo>
        <relationshipLabel>System Configs</relationshipLabel>
        <relationshipName>System_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>System Configs</relationshipLabel>
        <relationshipName>System_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>System Config</label>
    <nameField>
        <label>System Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Configs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>